apps/demo-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-nginx
  namespace: apps
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: demo-nginx.gervil.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: demo-nginx
            port:
              number: 80
